--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,60 @@
         <item>AB+</item>
         <item>AB-</item>
     </string-array>
+    <string-array name="doctor_category_array">
+        <item>Select Category</item>
+        <item>Cardiology()</item>
+        <item>Chest Diseases()</item>
+        <item>Dentistry()</item>
+        <item>Dermatology()</item>
+        <item>Diabetic()</item>
+        <item>Dietetics()</item>
+        <item>Endocrinology()</item>
+        <item>ENT()</item>
+        <item>Gastroenterology()</item>
+        <item>Gynecology()</item>
+        <item>Hematology()</item>
+        <item>Hepatology()</item>
+        <item>Medicine()</item>
+        <item>Nephrology()</item>
+        <item>Neurology()</item>
+        <item>Neorosurgery()</item>
+        <item>Neoromedicine()</item>
+        <item>Oncology()</item>
+        <item>Ophthalmology()</item>
+        <item>Orthopedics()</item>
+        <item>Paediatrics()</item>
+        <item>Psychiatric()</item>
+        <item>Pulmonology()</item>
+        <item>Physiotherapy()</item>
+        <item>Rhematology()</item>
+        <item>Urology()</item>
+        <item>Cardiac Surgery()</item>
+        <item>ENT Surgery()</item>
+        <item>General Surgery()</item>
+        <item>Gynecology Surgery()</item>
+        <item>Laparoscopic Surgery()</item>
+        <item>Maxillofacial Surgery()</item>
+        <item>Orthopedic Surgery()</item>
+        <item>Paediatric Surgery()</item>
+        <item>Plastic Surgery()</item>
+        <item>Surgical Surgery()</item>
+        <item>Urology Surgery()</item>
+        <item>Vascular Surgery()</item>
+
+    </string-array>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_home">Home</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_tools">Tools</string>
+    <string name="menu_share">Share</string>
+    <string name="menu_send">Send</string>
 </resources>
